  Mark Shinwell, Thomas Braibant, Stephen Dolan, Pierre Chambart,
  François Bobot, Jacques Garrigue, David Allsopp, and Alain Frisch)

- GPR#938, GPR#1170, GPR#1289: Stack overflow detection on 64-bit Windows
  (Olivier Andrieu, tweaked by David Allsopp)

- GPR#1073: Remove statically allocated compare stack.
  (Stephen Dolan)

- GPR#1269: Remove 50ms delay at exit for programs using threads
  (Valentin Gatien-Baron, review by Stephen Dolan)

* MPR#7594, GPR#1274: String_val now returns 'const char*', not
  'char*' when -safe-string is enabled at configure time.
  New macro Bytes_val for accessing bytes values.
  (Jeremy Yallop, reviews by Mark Shinwell and Xavier Leroy)

* GPR#1309: open files with O_CLOEXEC (or equivalent) in caml_sys_open thus
  unifying the semantics between Unix and Windows and also eliminating race
  condition on Unix.
  (David Allsopp, report by Andreas Hauptmann)

- GPR#1326: Enable use of CFI directives in AArch64 and ARM runtime
  systems' assembly code (asmrun/arm64.S).  Add CFI directives to enable
  unwinding through [caml_c_call] and [caml_call_gc] with correct termination
  of unwinding at [main].
  (Mark Shinwell, review by Xavier Leroy and Gabriel Scherer)


OCaml 4.05.0 (13 Jul 2017):
---------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Code generation and optimizations:

- MPR#7201, GPR#954: Correct wrong optimisation of "0 / <expr>"
  and "0 mod <expr>" in the case when <expr> was a non-constant
  evaluating to zero
  (Mark Shinwell, review by Gabriel Scherer, Leo White and Xavier Leroy)

- MPR#7357, GPR#832: Improve compilation time for toplevel
  include(struct ... end : sig ... end)
  (Alain Frisch, report by Hongbo Zhang, review by Jacques Garrigue)

- MPR#7533, GPR#1173: Correctly perform side effects for certain
  cases of "/" and "mod"
  (Mark Shinwell, report by Jan Mitgaard)

- GPR#504: Instrumentation support for fuzzing with afl-fuzz.